Fix list item padding and title wrapping.

--- a/packages/reactor-conference-app/theme-conference-app/sass/src/dataview/List.scss
+++ b/packages/reactor-conference-app/theme-conference-app/sass/src/dataview/List.scss
@@ -45,6 +45,7 @@
 .app-list-text {
     flex: 1;
     overflow: hidden;
+    padding-right: 30px;
 }
 
 .app-list-headshot {
@@ -58,10 +59,7 @@
 .app-list-item-title {
     font-size: 18px;
     line-height: 1.5em;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     color: $base-color;
-    overflow: hidden;
 }
 
 .app-list-item-details {
